--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,23 @@
 [tool.poetry]
-name = "sample_module"
+name = "crown_schedule"
 version = "0.1.0"
 description = "A Small Example Package"
 authors = ["Michael Penhallegon <mike@hematite.tech>"]
 license = "Apache-2"
 packages = [
-    {include="sample_module", from="src", format="wheel"}
+    {include="crown_schedule", from="src", format="wheel"}
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.10"
 wheel = "^0.37.0"
+faker = "^17.6.0"
 
-[tool.poetry.dev-dependencies]
-ipdb = "^0.13.9"
-yapf = "^0.31.0"
-flake8 = "^4.0.1"
-pytest = "^6.2.5"
-tox = "mypy"
-mypy = "^0.910"
-safety = "^1.10.3"
-
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.2"
+flake9 = "^3.8.3.post2"
+ipdb = "^0.13.13"
+mypy = "^1.1.1"
 
 [tool.mypy]
 python_version="3.8"
